# VoronoiAreas

./: AreasBuilder.cpp  AreasBuilder.h  CMakeLists.txt  main.cpp
